tests/neg/i17266.check
-- [E181] Potential Issue Error: tests/neg/i17266.scala:4:2 ------------------------------------------------------------
4 |  synchronized { // error
  |  ^^^^^^^^^^^^
  |  Suspicious top-level unqualified call to synchronized
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | Top-level unqualified calls to AnyRef or Any methods such as synchronized are
  | resolved to calls on Predef or on imported methods. This might not be what
  | you intended.
   ---------------------------------------------------------------------------------------------------------------------
-- [E181] Potential Issue Error: tests/neg/i17266.scala:17:2 -----------------------------------------------------------
17 |  synchronized { // error
   |  ^^^^^^^^^^^^
   |  Suspicious top-level unqualified call to synchronized
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | Top-level unqualified calls to AnyRef or Any methods such as synchronized are
   | resolved to calls on Predef or on imported methods. This might not be what
   | you intended.
    --------------------------------------------------------------------------------------------------------------------
-- [E181] Potential Issue Error: tests/neg/i17266.scala:108:2 ----------------------------------------------------------
108 |  wait() // error
    |  ^^^^
    |  Suspicious top-level unqualified call to wait
    |-------------------------------------------------------------------------------------------------------------------
    | Explanation (enabled by `-explain`)
    |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
    | Top-level unqualified calls to AnyRef or Any methods such as wait are
    | resolved to calls on Predef or on imported methods. This might not be what
    | you intended.
     -------------------------------------------------------------------------------------------------------------------
-- [E181] Potential Issue Error: tests/neg/i17266.scala:115:2 ----------------------------------------------------------
115 |  wait() // error
    |  ^^^^
    |  Suspicious top-level unqualified call to wait
    |-------------------------------------------------------------------------------------------------------------------
    | Explanation (enabled by `-explain`)
    |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
    | Top-level unqualified calls to AnyRef or Any methods such as wait are
    | resolved to calls on Predef or on imported methods. This might not be what
    | you intended.
     -------------------------------------------------------------------------------------------------------------------
-- [E181] Potential Issue Error: tests/neg/i17266.scala:121:2 ----------------------------------------------------------
121 |  wait(10) // error
    |  ^^^^
    |  Suspicious top-level unqualified call to wait
    |-------------------------------------------------------------------------------------------------------------------
    | Explanation (enabled by `-explain`)
    |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
    | Top-level unqualified calls to AnyRef or Any methods such as wait are
    | resolved to calls on Predef or on imported methods. This might not be what
    | you intended.
     -------------------------------------------------------------------------------------------------------------------
-- [E181] Potential Issue Error: tests/neg/i17266.scala:128:2 ----------------------------------------------------------
128 |  wait(10) // error
    |  ^^^^
    |  Suspicious top-level unqualified call to wait
    |-------------------------------------------------------------------------------------------------------------------
    | Explanation (enabled by `-explain`)
    |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
    | Top-level unqualified calls to AnyRef or Any methods such as wait are
    | resolved to calls on Predef or on imported methods. This might not be what
    | you intended.
     -------------------------------------------------------------------------------------------------------------------
-- [E181] Potential Issue Error: tests/neg/i17266.scala:134:2 ----------------------------------------------------------
134 |  hashCode() // error
    |  ^^^^^^^^
    |  Suspicious top-level unqualified call to hashCode
    |-------------------------------------------------------------------------------------------------------------------
    | Explanation (enabled by `-explain`)
    |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
    | Top-level unqualified calls to AnyRef or Any methods such as hashCode are
    | resolved to calls on Predef or on imported methods. This might not be what
    | you intended.
     -------------------------------------------------------------------------------------------------------------------
-- [E181] Potential Issue Error: tests/neg/i17266.scala:141:2 ----------------------------------------------------------
141 |  hashCode() // error
    |  ^^^^^^^^
    |  Suspicious top-level unqualified call to hashCode
    |-------------------------------------------------------------------------------------------------------------------
    | Explanation (enabled by `-explain`)
    |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
    | Top-level unqualified calls to AnyRef or Any methods such as hashCode are
    | resolved to calls on Predef or on imported methods. This might not be what
    | you intended.
     -------------------------------------------------------------------------------------------------------------------
